# Habit-Tracker

./: .env.sample  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  dump.rdb  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_days_of_week_habit_is_active.py
htmlcov/: index.html
notifications/: admin.py  apps.py  models.py  periodic.py  serializers.py  tasks.py  tests.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_notificationlog.py
