[tool.poetry]
name = "Habit_Tracker"
version = "0.1.0"
description = ""
authors = ["Ilia Ryutin <iryutin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dotenv = "^0.9.9"
drf-yasg = "^1.21.10"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
